-movie test is about to end -minor bugs fix